# mirror_web

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
src/web_mirror/: __init__.py  browser.py  cli.py  config.py  crawler.py  policies.py  resources.py  rewriters.py  snapshot.py  storage.py  url_utils.py
