[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "authorized-web-mirror"
version = "0.1.0"
description = "Authorized static website mirroring tool built with Playwright and BeautifulSoup."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Eric Margay" }
]
license = { text = "MIT" }
dependencies = [
  "beautifulsoup4>=4.12.3",
  "playwright>=1.45.0",
  "requests>=2.32.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "pytest>=8.0.0"
]

[project.scripts]
web-mirror = "web_mirror.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
