[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-mirror-pro"
version = "0.2.0"
description = "Authorized static website mirroring tool powered by Playwright."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Eric Margay" }
]
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "playwright>=1.45.0"
]

[project.scripts]
web-mirror = "web_mirror.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
